// ============================================================
// DATABASE: enmerce_order
// Order lifecycle, saga orchestration, status tracking
// Visualize: paste vào https://dbdiagram.io
// ============================================================

Project enmerce_order {
  database_type: 'PostgreSQL'
  Note: '''
    # Order Database
    Saga orchestrator for checkout flow.
    Immutable order item snapshots. Full status history.
  '''
}

Table orders {
  id                  uuid [pk, default: `gen_random_uuid()`]
  order_number        varchar(30) [unique, not null, note: 'ORD-20260329-XXXX']
  user_id             uuid [not null]
  merchant_id         uuid [not null]
  status              varchar(30) [not null, default: 'pending_payment', note: '''
    pending_payment, payment_processing, payment_failed,
    confirmed, processing, ready_to_ship,
    shipped, delivered, completed,
    cancellation_requested, cancelled, disputed
  ''']
  subtotal            decimal(15,2) [not null]
  shipping_fee        decimal(15,2) [not null, default: 0]
  total_amount        decimal(15,2) [not null, note: 'subtotal + shipping + tax - discount']
  item_count          int [not null]
  payment_id          uuid [note: 'cross-service ref to Payment']
  payment_method_type varchar(50) [note: 'credit_card|bank_transfer|cod|e_wallet']
  shipment_id         uuid [note: 'cross-service ref to Shipping']
  fraud_score         decimal(5,4) [note: '0.0000-1.0000, from stateless Fraud Service via Kafka']
  fraud_status        varchar(20) [default: 'pending', note: 'pending|approved|flagged|rejected']
  fraud_trace_id      varchar(255) [note: 'ELK correlation ID — trace full fraud details in Kibana']
  idempotency_key     varchar(255) [unique, note: 'STRIDE S-PAY-02: anti-replay']
  customer_note       text
  internal_note       text
  ip_address          inet [note: 'STRIDE R-PAY-01: device tracking']
  user_agent          text [note: 'STRIDE R-PAY-01: non-repudiation']
  metadata            jsonb [default: '{}']
  paid_at             timestamptz
  confirmed_at        timestamptz
  shipped_at          timestamptz
  delivered_at        timestamptz
  completed_at        timestamptz
  cancelled_at        timestamptz
  cancellation_reason text
  created_at          timestamptz [not null, default: `now()`]
  updated_at          timestamptz [not null, default: `now()`]
  created_by          uuid
  updated_by          uuid
  version             int [not null, default: 1]

  indexes {
    (user_id, created_at) [name: 'idx_ord_user']
    (merchant_id, status) [name: 'idx_ord_merchant']
    (status) [name: 'idx_ord_status']
    (order_number) [name: 'idx_ord_number']
    (fraud_status) [name: 'idx_ord_fraud', note: 'WHERE fraud_status = flagged']
    (fraud_trace_id) [name: 'idx_ord_fraud_trace']
    (created_at) [name: 'idx_ord_created']
  }
}

Table order_items {
  id                uuid [pk, default: `gen_random_uuid()`]
  order_id          uuid [not null, ref: > orders.id]
  product_id        uuid [not null]
  variant_id        uuid
  merchant_id       uuid [not null]
  sku               varchar(100) [not null]
  product_name      varchar(500) [not null, note: 'immutable snapshot']
  variant_label     varchar(255)
  image_url         text
  quantity          int [not null, note: '> 0']
  unit_price        decimal(15,2) [not null]
  line_total        decimal(15,2) [not null, note: '(unit_price - discount) * qty + tax']
  fulfilled_qty     int [not null, default: 0]
  status            varchar(20) [not null, default: 'pending', note: 'pending|confirmed|shipped|delivered|cancelled']
  metadata          jsonb [default: '{}']
  created_at        timestamptz [not null, default: `now()`]

  indexes {
    (order_id) [name: 'idx_oi_order']
    (product_id) [name: 'idx_oi_product']
  }
}

Table order_addresses {
  id                      uuid [pk, default: `gen_random_uuid()`]
  order_id                uuid [not null, ref: > orders.id]
  address_type            varchar(10) [not null, note: 'shipping|billing']
  full_name_encrypted     bytea [not null, note: '🔒 FLE']
  phone_encrypted         bytea [not null, note: '🔒 FLE']
  email_encrypted         bytea [note: '🔒 FLE']
  address_line1_encrypted bytea [not null, note: '🔒 FLE']
  address_line2_encrypted bytea [note: '🔒 FLE']
  city                    varchar(100) [not null]
  state_province          varchar(100)
  country_code            char(2) [not null]
  postal_code             varchar(20)
  created_at              timestamptz [not null, default: `now()`]

  indexes {
    (order_id, address_type) [unique]
  }
}

Table order_status_history {
  id          uuid [pk, default: `gen_random_uuid()`]
  order_id    uuid [not null, ref: > orders.id]
  from_status varchar(30)
  to_status   varchar(30) [not null]
  reason      text
  actor_id    uuid
  actor_type  varchar(20) [not null, default: 'system', note: 'user|merchant|admin|system']
  metadata    jsonb [default: '{}']
  created_at  timestamptz [not null, default: `now()`]

  indexes {
    (order_id, created_at) [name: 'idx_osh_order']
  }

  Note: 'Event sourcing light — full state transition history'
}


Table saga_state {
  id               uuid [pk, default: `gen_random_uuid()`]
  order_id         uuid [not null, ref: > orders.id]
  saga_type        varchar(50) [not null, default: 'checkout']
  current_step     varchar(50) [not null]
  status           varchar(20) [not null, default: 'in_progress', note: 'in_progress|completed|compensating|failed|compensated']
  steps_completed  jsonb [not null, default: '[]', note: '["validate_cart","reserve_inventory"]']
  steps_remaining  jsonb [not null, default: '[]']
  compensation_log jsonb [not null, default: '[]', note: 'rollback actions taken']
  error_details    jsonb
  retry_count      int [not null, default: 0]
  max_retries      int [not null, default: 3]
  started_at       timestamptz [not null, default: `now()`]
  completed_at     timestamptz
  updated_at       timestamptz [not null, default: `now()`]
  expires_at       timestamptz [not null, default: `now() + interval '30 minutes'`]

  indexes {
    (order_id, saga_type) [unique]
    (status) [name: 'idx_saga_active', note: 'WHERE status IN (in_progress, compensating)']
    (expires_at) [name: 'idx_saga_expires']
  }

  Note: 'Checkout saga orchestration — distributed transaction management'
}

// ─── AUDIT LOG ──────────────────────────────────────────────
// Table này track MỌI thay đổi khác trên order data.

Table order_audit_log {
  id               uuid [pk, default: `gen_random_uuid()`]
  table_name       varchar(100) [not null, note: 'orders|order_items|order_addresses']
  record_id        uuid [not null, note: 'PK of affected record']
  action           varchar(10) [not null, note: 'INSERT|UPDATE|DELETE']
  old_data         jsonb [note: 'state trước khi thay đổi (NULL for INSERT)']
  new_data         jsonb [note: 'state sau khi thay đổi (NULL for DELETE)']
  changed_fields   text[] [note: 'list of changed column names — fast filtering']
  actor_id         uuid [note: 'user/admin/system who made the change']
  actor_type       varchar(20) [note: 'user|merchant|admin|system|migration']
  ip_address       inet [note: 'STRIDE R: non-repudiation']
  user_agent       text
  correlation_id   varchar(255) [note: 'ELK trace_id — bidirectional PG ↔ ELK tracing']
  hmac_signature   varchar(128) [note: 'STRIDE T-DB-02: tamper detection via Vault Transit']
  hmac_key_version int [not null, default: 1, note: 'Vault key version for rotation support']
  created_at       timestamptz [not null, default: `now()`]

  indexes {
    (table_name, record_id) [name: 'idx_ord_audit_record']
    (actor_id) [name: 'idx_ord_audit_actor']
    (created_at) [name: 'idx_ord_audit_time']
  }

  Note: '''
    Append-only, partitioned by RANGE(created_at) monthly.
    HMAC via Vault Transit (cached key, TTL 5 min) for integrity.
    Bổ sung cho order_status_history — track non-status changes:
    amount modification, fraud_status override, address change,
    order_items.fulfilled_qty update, etc.
    Retention: 5 năm (Hot 12m → Warm 36m → Cold 60m).
    Populated by PostgreSQL trigger (hybrid approach).
  '''
}
